Fix the services listing on mobile

--- a/styles.css
+++ b/styles.css
@@ -188,9 +188,13 @@ hr {
   box-shadow: .15rem .15rem .15rem #5c5111;
 }
 
+.services-heading {
+  display: flex;
+}
+
 article h3 {
   font-weight: bold;
-  padding: 0 0 2rem .5rem;
+  padding: .8rem 0 .5rem .5rem;
   font-size: 1.7rem;
   width: 75%;
 }
